static/css/theme.css
/* ... */
    div.funding-information {
        display: inline-block;
        vertical-align: top;
        padding-left: 1rem;
        padding-top: 4rem;
        width: 23rem;
    }
    .bootable-author {
        margin-right: 3rem;
    }
    .bootable-category {
        margin-left: 3rem;
    }
    .funding-information .big-number {
        font-size: 2.5rem;
        font-weight: bold;
        margin-bottom: 0;
    }
    #view-bootable,
    #view-backers {
        width: 40em;
    }
    #view-backers > p.centre-align {
        margin-top: 2rem;
    }
    #view-pledges {
        padding-top: 1.3em;
        padding-left: 1.2em;
        border-left: 1px solid #ccc;
        width: 20em;
        min-height: 20em;
        position: relative;
        top: -1.8em;
    }
    #view-pledges > ol {
        margin-bottom: 0;
    }
    #view-pledges .pledge {
        width: 100%;
        padding: 1em;
    }
    #view-pledges .pledge > strong {
        width: 80%;
        display: inline-block;
    }
    #view-pledges .pledge button {
        float: right;
    }

    form#pledge-confirmation {
        margin-top: 4rem;
    }
    form#pledge-confirmation button {
        margin-top: 1rem;
    }

    /*
    Profile
    --------------------------------------*/
    #profile-pledges,
    #profile-info {
        width: 100%;
    }
    #profile-pledges > ul > li {
        min-height: 12em;
        overflow: hidden;
    }
    #profile-pledges .big-number {
        font-size: 1.4rem;
        font-weight: bold;
    }
    #profile-pledges #pledge-bootable {
        width: 60%;
        padding-right: 1rem;
        margin-bottom: 0;
    }
    #profile-pledges #pledge-bootable h3 {
        margin-top: 0;
    }
    #profile-pledges #pledge-pledge {
        width: 40%;
        padding-top: 1em;
        padding-left: 2rem;
        margin-bottom: 0;
        border-left: 1px solid #ccc;
        min-height: 12em;
    }
    #profile-pledges .progress-container {
        margin-top: 0.5em;
        margin-bottom: 0.5em;
    }
    #profile-pledges .feature-completion, 
    #profile-pledges .feature-backers, 
    #profile-pledges .feature-status {
        display: inline-block;
        width: 32%;
        text-align: center;
        font-weight: bold;
    }
    #profile-pledges .feature-category {
        float: right;
        font-size: 80%;
        color: #888;
    }
    #profile-pledges .feature-total {
        margin: 0;
        width: 100%;
        text-align: center;
    }
    #profile-info #profile-personal,
    #profile-info #profile-billing {
        width: 47.5%;
    }

    /*
    Footer
    --------------------------------------*/
    footer {
        text-align: center;
        margin-top: 6em;
        margin-bottom: 2em;
    }

    footer ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
        text-align: center;
    } 

    footer ul li { 
        display: inline-block; 
    }
    footer ul.dotted li:after { content: " \2022 "; }
    footer ul.dotted li:last-child:after { content: none; }

    footer li > a {
        width: 60px;
        padding-left: 1em;
        padding-right: 1em;
    }

    footer #links {
        font-size: 1.5em;
        color: rgba(0, 0, 0, 0.8);
    }

    footer #credits {
        margin-top: 3em;
    }


/*
Style
----------------------------------------------*/

    input[type="search"] {
        border-top-left-radius: 0.5em;
        border-bottom-left-radius: 0.5em;
    }
    button.search,
    input[type="submit"].search {
        border-radius: 0;
        border-top-right-radius: 0.5em;
        border-bottom-right-radius: 0.5em;
    }
    /*
    Footer
    --------------------------------------*/
    footer {
        color: rgba(0, 0, 0, 0.4);
    }
    footer #credits h3 {
        color: rgba(0, 0, 0, 0.4);
    }
    footer a {
        color: rgba(0, 0, 0, 0.5);
    }
    footer a:hover { 
        color: rgba(0, 0, 0, 0.7);
    }

    /*
    Targeted link to fade.
    --------------------------------------*/
    @keyframes highlight-yellow {
        0%   {background: #ffc800;}
        100% {background: inherit;}
    }

    .highlight:target {
        animation: highlight-yellow 4s linear;
    }

